# llm_agent_evolution_minimal

./: .pylintrc  example.py  local_instructions.md  main.py  memory.py  notes.md  pyproject.toml  utils.py
memdiff/: memory.py
tests/: test_memory.py
